--- a/index.html
+++ b/index.html
@@ -6,32 +6,37 @@
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/jsx">
-    const app = document.getElementById("app")
-
     function Header({ title = 'Default Title' }) {
       return <h1>{title}</h1>
     }
 
     function HomePage() {
+      const names = ['Ada Lovelace', 'Grace Hopper', 'Margaret Hamilton'];
+
+      function handleClick() {
+        console.log("increment like count")
+      }
+
       return (
         <div>
-          <Header title="React" />
-          <Header title="A new title" />
+          <Header title="Develop. Preview. Ship." />
+          <ul>
+            {names.map((name) => (
+              <li key={name}>{name}</li>
+            ))}
+          </ul>
+          <button onClick={handleClick}>Like</button>
         </div>
       );
     }
 
-    function createTitle(title) {
-      if (title) {
-        return title;
-      } else {
-        return 'Default title';
-      }
+    function main() {
+      const app = document.getElementById("app")
+      const root = ReactDOM.createRoot(app);
+      root.render(<HomePage />);
     }
 
-    const root = ReactDOM.createRoot(app);
-    // root.render(<Header />);
-    root.render(<HomePage />);
+    main();
   </script>
 </body>
 
