--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     function HomePage() {
       const names = ['Ada Lovelace', 'Grace Hopper', 'Margaret Hamilton'];
 
+      const [likes, setLikes] = React.useState(0);
+
       function handleClick() {
+        setLikes(likes + 1);
         console.log("increment like count")
       }
 
@@ -25,7 +28,8 @@
               <li key={name}>{name}</li>
             ))}
           </ul>
-          <button onClick={handleClick}>Like</button>
+          {/* <button onClick={handleClick}>Like</button> */}
+          <button onClick={handleClick}>Like({likes})</button>
         </div>
       );
     }
